# number-loom

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: puzzle_archive.yml
benches/: benchmark.rs
examples/: README.md
jules-scratch/verification/: verify_metadata_ui.py  verify_solver_sidebar.py
puzzles/: a_different_double_helix.xml  a_woodwind_oddly_enough.xml  air_wettener.xml  atrus.xml  be_serious.xml  front_and_center.xml  full_of_crackers.xml  listen_left_and_right.xml  little_hauler.xml  logo.xml  look_sharp.xml  lost_like_an_expensive_sock.xml  missing.xml  not_invented_yet_1.xml  not_invented_yet_2.xml  not_invented_yet_3.xml  off_the_ring.xml  pick_up_in_the_90s.xml  roche_limit.xml  rolling_behind_you.xml  soft_strong_and_disposable.xml  soups_on.xml  steeping.xml  such_a_shame_color_nonograms_do_not_exist.xml  take_two.xml  taking_waves.xml  too_bright.xml  too_early.xml  too_much_weather.xml  try_turning_it_over.xml  what_is_it.xml
src/: export.rs  grid_solve.rs  gui.rs  gui_canvas.rs  gui_gallery.rs  gui_solver.rs  gui_test.rs  import.rs  lib.rs  line_solve.rs  main.rs  puzzle.rs  solver_fuzzer.rs  user_settings.rs
src/formats/: char_grid.rs  html.rs  image.rs  mod.rs  olsak.rs  webpbn.rs  woven.rs
tests/: gui.rs
